feat: ui short-url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <app-navbar></app-navbar>
-
-<h1>Hello url app</h1>
-<button class="btn btn-primary">hola</button>
-<a href="#" class="btn btn-primary">Primary</a>
+<app-short-url></app-short-url>
