--- a/src/app/components/short-url/short-url.component.html
+++ b/src/app/components/short-url/short-url.component.html
@@ -1,1 +1,18 @@
-<p>short-url works!</p>
+<div class="container">
+    <h1 class="mt-3 text-center display-5">Enter your url:</h1>
+
+    <div class="row">
+        <div class="col-lg-8 mb-2">
+            <input type="text" name="url" id="url" class="form-control form-control-lg" placeholder="Enter a url">
+        </div>
+        <div class="col-lg-4 mb-2">
+            <button class="w-100 btn btn-primary btn-lg">Create Url</button>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-lg-12">
+            <input type="text" name="url-processed" id="url-processed" class="form-control form-control-lg" placeholder="Url created">
+        </div>
+    </div>
+</div>
