feat: show shor urls

--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,1 +1,11 @@
-<p>spinner works!</p>
+<div class="sk-cube-grid m-0 mx-auto mt-2">
+    <div class="sk-cube sk-cube1 bg-primary"></div>
+    <div class="sk-cube sk-cube2 bg-primary"></div>
+    <div class="sk-cube sk-cube3 bg-primary"></div>
+    <div class="sk-cube sk-cube4 bg-primary"></div>
+    <div class="sk-cube sk-cube5 bg-primary"></div>
+    <div class="sk-cube sk-cube6 bg-primary"></div>
+    <div class="sk-cube sk-cube7 bg-primary"></div>
+    <div class="sk-cube sk-cube8 bg-primary"></div>
+    <div class="sk-cube sk-cube9 bg-primary"></div>
+</div>
