--- a/src/app/components/short-url/short-url.component.html
+++ b/src/app/components/short-url/short-url.component.html
@@ -1,3 +1,14 @@
+<div 
+    *ngIf="errorMessage"
+    class="alert alert-dismissible alert-warning">
+    <button (click)="hideErrorMessage()"
+        type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <h4 class="alert-heading">Warning!</h4>
+    <p class="mb-0">
+        {{ errorMessage }}
+    </p>
+</div>
+
 <div class="container">
     <h1 class="mt-3 text-center display-5">Enter your url:</h1>
 
@@ -9,6 +20,9 @@
             <button (click)="handleCreateUrl()" class="w-100 btn btn-primary btn-lg">Create Url</button>
         </div>
     </div>
+
+    <app-spinner>
+    </app-spinner>
 
     <div *ngIf="isUrlProcessed" class="row mt-4">
         <div class="col-lg-12">
