feat: manage errors in short-urls

--- a/src/app/components/short-url/short-url.component.html
+++ b/src/app/components/short-url/short-url.component.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <app-spinner>
+    <app-spinner *ngIf="processingUrl">
     </app-spinner>
 
     <div *ngIf="isUrlProcessed" class="row mt-4">
